// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectInput /> should have some hintText 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexWrap_nowrap__3xgq1lh7 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhc"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_select__1oah0227 useBoxStyles_flexGrow_1__3xgq1lh4 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf1 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5w useBoxStyles_display_flex__3xgq1lfq useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexShrink_0__3xgq1lh5 SelectInput_arrow__1gqjkbj2"
        >
          <i
            class="useBoxStyles_display_block__3xgq1lfp Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__3xgq1lfp useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_textAlign_left__3xgq1lfh useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_natural_default_borderColour__a2a1mv5"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_natural_default_borderColour__a2a1mv5"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_none__3xgq1lfv useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          Hello World!
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lft useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_placeholder_default__1ft8sxlt useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholder_mutedLabelStyles__1ft8sxlu NotchedBase_placeholderPlacement_medium_default__1ft8sxly"
        >
          Hello World!
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_natural_default_borderColour__a2a1mv5 InputState_natural_default_borderColour__a2a1mv5"
      />
    </div>
  </div>
  <p
    class="reset_blockText__1oah022c useBoxStyles_textAlign_left__3xgq1lfh useTextStyles_root__1xnpmd70 reset_blockText__1oah022c useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_sizes_2__1xnpmd72 reset_blockText__1oah022c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l84 HintText_hintText__down5s0 InputState_natural_default_colour__a2a1mv4"
  >
    hint text
  </p>
</div>
`;

exports[`<SelectInput /> should match snapshot 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexWrap_nowrap__3xgq1lh7 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhc"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_select__1oah0227 useBoxStyles_flexGrow_1__3xgq1lh4 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf1 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5w useBoxStyles_display_flex__3xgq1lfq useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexShrink_0__3xgq1lh5 SelectInput_arrow__1gqjkbj2"
        >
          <i
            class="useBoxStyles_display_block__3xgq1lfp Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__3xgq1lfp useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_textAlign_left__3xgq1lfh useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_natural_default_borderColour__a2a1mv5"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_natural_default_borderColour__a2a1mv5"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_none__3xgq1lfv useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          Hello World!
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lft useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_placeholder_default__1ft8sxlt useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholder_mutedLabelStyles__1ft8sxlu NotchedBase_placeholderPlacement_medium_default__1ft8sxly"
        >
          Hello World!
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_natural_default_borderColour__a2a1mv5 InputState_natural_default_borderColour__a2a1mv5"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when active 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexWrap_nowrap__3xgq1lh7 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhc"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_select__1oah0227 useBoxStyles_flexGrow_1__3xgq1lh4 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf1 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5w useBoxStyles_display_flex__3xgq1lfq useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexShrink_0__3xgq1lh5 SelectInput_arrow__1gqjkbj2"
        >
          <i
            class="useBoxStyles_display_block__3xgq1lfp Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__3xgq1lfp useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_textAlign_left__3xgq1lfh useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_activeBorderColour__a2a1mv1"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_activeBorderColour__a2a1mv1"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_block__3xgq1lfp useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          Hello World!
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lft useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_placeholder_default__1ft8sxlt InputState_activeColour__a2a1mv0 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl10"
        >
          Hello World!
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_activeBorderColour__a2a1mv1 InputState_activeBorderColour__a2a1mv1"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexWrap_nowrap__3xgq1lh7 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhc"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_select__1oah0227 useBoxStyles_flexGrow_1__3xgq1lh4 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf1 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5w useBoxStyles_display_flex__3xgq1lfq useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexShrink_0__3xgq1lh5 SelectInput_arrow__1gqjkbj2"
        >
          <i
            class="useBoxStyles_display_block__3xgq1lfp Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__3xgq1lfp useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_textAlign_left__3xgq1lfh useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_error_default_borderColour__a2a1mvd"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_error_default_borderColour__a2a1mvd"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_none__3xgq1lfv useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          Hello World!
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lft useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_placeholder_default__1ft8sxlt useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholder_mutedLabelStyles__1ft8sxlu NotchedBase_placeholderPlacement_medium_default__1ft8sxly"
        >
          Hello World!
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_error_default_borderColour__a2a1mvd InputState_error_default_borderColour__a2a1mvd"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexWrap_nowrap__3xgq1lh7 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhc"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_select__1oah0227 useBoxStyles_flexGrow_1__3xgq1lh4 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf1 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5w useBoxStyles_display_flex__3xgq1lfq useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexShrink_0__3xgq1lh5 SelectInput_arrow__1gqjkbj2"
        >
          <i
            class="useBoxStyles_display_block__3xgq1lfp Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__3xgq1lfp useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_textAlign_left__3xgq1lfh useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_error_default_borderColour__a2a1mvd"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_error_default_borderColour__a2a1mvd"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_none__3xgq1lfv useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          Hello World!
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lft useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_placeholder_default__1ft8sxlt useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholder_mutedLabelStyles__1ft8sxlu NotchedBase_placeholderPlacement_medium_default__1ft8sxly"
        >
          Hello World!
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_error_default_borderColour__a2a1mvd InputState_error_default_borderColour__a2a1mvd"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched and valid 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexWrap_nowrap__3xgq1lh7 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhc"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_select__1oah0227 useBoxStyles_flexGrow_1__3xgq1lh4 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf1 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5w useBoxStyles_display_flex__3xgq1lfq useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexShrink_0__3xgq1lh5 SelectInput_arrow__1gqjkbj2"
        >
          <i
            class="useBoxStyles_display_block__3xgq1lfp Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__3xgq1lfp useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_textAlign_left__3xgq1lfh useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_success_default_borderColour__a2a1mv7"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_success_default_borderColour__a2a1mv7"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_none__3xgq1lfv useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          Hello World!
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lft useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_placeholder_default__1ft8sxlt useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholder_mutedLabelStyles__1ft8sxlu NotchedBase_placeholderPlacement_medium_default__1ft8sxly"
        >
          Hello World!
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_success_default_borderColour__a2a1mv7 InputState_success_default_borderColour__a2a1mv7"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot with custom icon 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb input-class"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexWrap_nowrap__3xgq1lh7 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhc"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_select__1oah0227 useBoxStyles_flexGrow_1__3xgq1lh4 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf1 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
        />
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5w useBoxStyles_display_flex__3xgq1lfq useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexShrink_0__3xgq1lh5 SelectInput_arrow__1gqjkbj2"
        >
          <i
            class="useBoxStyles_display_block__3xgq1lfp Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__3xgq1lfp useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_textAlign_left__3xgq1lfh useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_natural_default_borderColour__a2a1mv5"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_natural_default_borderColour__a2a1mv5"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_none__3xgq1lfv useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lft useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_placeholder_default__1ft8sxlt useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholder_mutedLabelStyles__1ft8sxlu NotchedBase_placeholderPlacement_medium_default__1ft8sxly"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_natural_default_borderColour__a2a1mv5 InputState_natural_default_borderColour__a2a1mv5"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot with prefix icon 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb input-class"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
    >
      <i
        class="useBoxStyles_display_block__3xgq1lfp Icon_makeResponsiveStyle_key_bp__1gy3ire4 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs withEnhancedInput_iconRoot__5jmdy8e withEnhancedInput_prefixIcon__5jmdy8f withEnhancedInput_iconSize_medium__5jmdy8i InputState_natural_default_colour__a2a1mv4"
        role="presentation"
      >
        <svg
          class="useBoxStyles_display_block__3xgq1lfp useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexWrap_nowrap__3xgq1lh7 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhc"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_select__1oah0227 useBoxStyles_flexGrow_1__3xgq1lh4 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_position_relative__3xgq1lfg useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf1 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a withEnhancedInput_inputItselfSize_medium_prefixed_any__5jmdy8c"
        />
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5w useBoxStyles_display_flex__3xgq1lfq useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgf useBoxStyles_flexShrink_0__3xgq1lh5 SelectInput_arrow__1gqjkbj2"
        >
          <i
            class="useBoxStyles_display_block__3xgq1lfp Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__3xgq1lfp useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfq useBoxStyles_width_full__3xgq1lfb useBoxStyles_height_full__3xgq1lfd useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_textAlign_left__3xgq1lfh useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_natural_default_borderColour__a2a1mv5"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_natural_default_borderColour__a2a1mv5"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_none__3xgq1lfv useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lft useBoxStyles_position_absolute__3xgq1lfe useBoxStyles_pointerEvents_none__3xgq1lhs NotchedBase_placeholder_default__1ft8sxlt useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholder_mutedLabelStyles__1ft8sxlu NotchedBase_placeholderPlacement_medium_defaultPrefixed__1ft8sxlz"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_natural_default_borderColour__a2a1mv5 InputState_natural_default_borderColour__a2a1mv5"
      />
    </div>
  </div>
</div>
`;
